Fixed spacing on bottom buttons

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -33,8 +33,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  gap: 0.6em;
-  margin-left: 1em;
+  gap: 0.6rem;
+  margin-inline-start: 1em; /* Also means margin-left */
 }
 
 .header {
@@ -69,6 +69,10 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+}
+
+.bottom-buttons {
+  padding-top: 0.4rem;
 }
 
 button {
